--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "babel-preset-latest": "^6.24.1",
     "crypto-js": "^3.1.9-1",
     "jest": "^20.0.4",
-    "node-fetch": "^1.7.1",
+    "node-fetch": "2.0.0-alpha.5",
     "rollup": "^0.43.0",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-watch": "^4.0.0"
+    "rollup-watch": "^4.0.0",
+    "url-parse": "^1.1.9"
   }
 }
