--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-watch": "^4.0.0",
-    "url-parse": "^1.1.9"
+    "url-parse": "^1.1.9",
+    "whatwg-url": "^6.1.0"
   }
 }
